--- a/lecture_11_Game_Sockets/activity/index.html
+++ b/lecture_11_Game_Sockets/activity/index.html
@@ -1,3 +1,4 @@
+ddd
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="one" style="top:0px; left:0px;" class="paddle"></div>
+    <div id="one" style="top:00px; left:0px;" class="paddle"></div>
     <div id="two" style="top:0px;" class="paddle"></div>
-    <div id="ball"></div>
+    <div id="ball" style="top:50vh;left:50vw;"></div>
 
     <script src="script.js"></script>
 </body>
