--- a/practice/barbarian/index.html
+++ b/practice/barbarian/index.html
@@ -1,11 +1,44 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="main_div">
+        <div class="center_div">
+            <div class = "card_main">
+                <div class="img_div">
+                    <figure>
+                        <img src="bar1.png" alt="">
+                    </figure>
+                </div>
+                <div class="about_div">
+                    <h3>level 1</h3>
+                    <h1>The Barbarian</h1>
+                    <p>The Barbarian is a Kilt-clad Scottish warrior with an
+                        angry, battle-ready expression, hungry for destruction.
+                        He has close-cropped blonde hair and a long, yellow
+                        horsehoe mustache.</p>
+                </div>
+                <div class="lower_div">
+                    <div>
+                        <p class="lower_number">16</p>
+                        <p class="lower_text">speed</p>
+                    </div>
+                    <div>
+                        <p class="lower_number">20<sup>s<sup></p>
+                        <p class="lower_text">training</p>
+                    </div>
+                    <div>
+                        <p class="lower_number">0.4</p>
+                        <p class="lower_text">range</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-</html>
+</html> -->
